--- a/personalSite.css
+++ b/personalSite.css
@@ -80,27 +80,27 @@ html {
 	line-height: .85em;
 }
 
-.nav {
+nav {
 	top: 0px ;
 	height: 80px;
 	background-color: white;
 	width: 100%;
 }
 
-.nav ul {
+nav ul {
 	margin: 0;
 	padding: 0;
 	margin-left: 100px;
 }
 
-.nav ul li {
+nav ul li {
 	list-style: none;
 	font-family: "arial", Arial, sans-serif;
 	font-size: 20px;
 	text-transform: capitalize;
 }
 
-.nav ul li a {
+nav ul li a {
 	text-decoration: none;
 	float: left;
 	color: #606060;
@@ -113,7 +113,7 @@ html {
 	text-transform: capitalize;
 }
 
-.nav ul li a:hover {
+nav ul li a:hover {
 	color: lightblue;
 	Margin-bottom: 0px;
 }
